fixes dark mode

--- a/style.css
+++ b/style.css
@@ -1,3 +1,3 @@
 /* pick a color 1st */
 :root{--ac:#F40}
-div{margin:4rem auto;max-width:54ch;font:110%/30px ui-sans-serif,sans-serif}*{color:#000;background:#fff;text-decoration:none}a{border-bottom:solid var(--ac)}h2,hr{margin-top:4rem}blockquote{border-left:solid var(--ac);margin:0;padding:0 1em}sup{font:icon}img{width:99%;height:auto;display:block;margin:2em auto}.caption{font-size:smaller;margin:-2em auto 2em;display:block;text-align:center}*{color-scheme:light dark}
+div{margin:4rem auto;max-width:54ch;font:110%/30px ui-sans-serif,sans-serif}a{color:unset;text-decoration:none;border-bottom:solid var(--ac)}h2,hr{margin-top:4rem}blockquote{border-left:solid var(--ac);margin:0;padding:0 1em}sup{font:icon}img{width:99%;height:auto;display:block;margin:2em auto}.caption{font-size:smaller;margin:-2em auto 2em;display:block;text-align:center}*{color-scheme:light dark}
